--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
         <p><span class="style1">Introduction Video:</span></p>
 
-        <p align="center"><video src="./material/video/intro.mp4" controls="controls" width="950"></video></p>
+        <p align="center"><video src="https://github.com/DataVideos/Data-Playwright/raw/main/material/video/intro.mp4" controls="controls" width="950"></video></p>
         <p>
             <br>
             <br>
