--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <sup>3</sup>The Hong Kong University of Science and Technology (Guangzhou), Guangzhou, China &nbsp;
             </h5>
 
-            <h4>IEEE Transactions on Visualization and Computer Graphics (Proc. <a href="http://ieeevis.org/year/2024/welcome">IEEE VIS 2024</a>)</h4>
+            <!-- <h4>IEEE Transactions on Visualization and Computer Graphics (Proc. <a href="http://ieeevis.org/year/2024/welcome">IEEE VIS 2024</a>)</h4> -->
                 <hr> 
         </center>
 
