--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <sup>3</sup>The Hong Kong University of Science and Technology (Guangzhou), Guangzhou, China &nbsp;
             </h5>
 
-            <!-- <h4>IEEE Transactions on Visualization and Computer Graphics (Proc. <a href="http://ieeevis.org/year/2024/welcome">IEEE VIS 2024</a>)</h4> -->
+            <h4>IEEE Transactions on Visualization and Computer Graphics</h4>
                 <hr> 
         </center>
 
@@ -201,7 +201,7 @@
             <!--=======materials========= -->
             </p><section>
                 <h2 class="para-title">Resources:</h2><br><br><br><br>
-                <a href="./material/pdf/paper.pdf">Paper</a> ｜
+                <a href="./material/pdf/DataPlaywright.pdf">Paper</a> ｜
                 <a href="./material/pdf/supp.zip">Supp</a><br>
             </section>
 
@@ -233,7 +233,7 @@
 
             <section>
                 <h2 class="para-title">Example Gallery:</h2><br><br><br><br>
-                Here are just a few examples presented in the <a href="./material/pdf/paper.pdf">paper</a>; more can be found in the <a href="./material/pdf/supp.zip">supplementary material</a>.
+                Here are just a few examples presented in the <a href="./material/pdf/DataPlaywright.pdf">paper</a>; more can be found in the <a href="./material/pdf/supp.zip">supplementary material</a>.
                 <br><br><br>
 
                 <video width="470" poster="./material/image/1.svg" controls>
